--- a/src/main/resources/templates/file/list.html
+++ b/src/main/resources/templates/file/list.html
@@ -19,7 +19,17 @@
     <form action="/files" method="post" enctype="multipart/form-data">
         <input type="hidden" name="path" th:value="${data.directoryFullPath}">
         <input type="file" multiple="multiple" name="files">
-        <input type="submit"/>
+        <button class="w-50 btn btn-primary btn-sm" type="submit">파일 업로드</button>
+    </form>
+
+    <br/>
+
+    <form action="/directories" method="post">
+        <div class="form-floating">
+            <input type="text" name="name" id="name" class="form-control" placeholder="폴더명">
+            <label for="name">폴더명</label>
+            <button class="w-50 btn btn-primary btn-sm" type="submit">폴더 생성</button>
+        </div>
     </form>
 
     <br/>
